--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+# Check that you have this dependency (added in the previous step)
 
+  # Add the dependencies for the Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: 2.2.0
+  firebase_auth: ^1.0.0
+  google_sign_in: ^5.2.1
+  firebase: ^9.0.0
+  firebase_core: ^1.10.6
+  page_transition: ^2.0.4
+  animated_text_kit: ^4.2.1
+  firebase_database: ^8.0.1
+  velocity_x: ^3.3.0
+  flutter_rating_bar: ^4.0.0
+  pull_to_refresh: ^2.0.0
+  material_floating_search_bar: ^0.3.6
+  implicitly_animated_list: ^2.1.0
+  lottie: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+  - assests/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
